Last minute changes and updated the README.md file.